# resonance-audio-builder

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ResonanceMusicBuilder.spec  build_exe.bat  config.json  coverage.json  error_log.txt  proxies.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_app.bat  setup.py
.github/workflows/: ci.yml
src/: library_builder.py
src/resonance_audio_builder/: cli.py  library_builder.py
src/resonance_audio_builder/audio/: analysis.py  audit.py  downloader.py  lyrics.py  metadata.py  musicbrainz.py  tagging.py  youtube.py
src/resonance_audio_builder/core/: builder.py  config.py  exceptions.py  input.py  logger.py  manager.py  state.py  ui.py  utils.py
src/resonance_audio_builder/network/: cache.py  limiter.py  proxies.py  utils.py
src/resonance_audio_builder/watch/: observer.py
tests/: conftest.py  test_analysis.py  test_audio_analysis.py  test_audio_downloader.py  test_audit.py  test_auxiliary_coverage.py  test_builder.py  test_builder_coverage_boost.py  test_builder_expanded.py  test_builder_menu_and_audit.py  test_builder_run.py  test_downloader.py  test_downloader_coverage_final.py  test_downloader_errors.py  test_downloader_expanded.py  test_downloader_full.py  test_exceptions.py  test_functional_scenarios.py  test_input.py  test_integration_pipeline.py  test_library_builder.py  test_logger.py  test_lyrics.py  test_manager.py  test_manager_circuit_breaker.py  test_manager_coverage.py  test_manager_coverage_final.py  test_manager_full.py  test_manager_lifecycle.py  test_musicbrainz.py  test_network_utils_expanded.py  test_proxies.py  test_proxy_manager.py  test_proxy_manager_final.py  test_rate_limiter.py  test_security_platform.py  test_spectral.py  test_state.py  test_tagging.py  test_ui.py  (+3 more)
tests/benchmarks/: __init__.py  test_bench_downloader.py  test_bench_metadata.py  test_bench_utils.py
