[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-audio-builder"
version = "8.3.0"
description = "Personal audio library builder with metadata and loudness normalization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ChinoMDN"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["audio", "music", "library", "metadata", "normalization"]

dependencies = [
    "yt-dlp>=2024.12.08",
    "mutagen>=1.47.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "Pillow>=10.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "bandit>=1.7.0",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest-asyncio",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
resonance-audio-builder = "resonance_audio_builder.cli:main"

[project.urls]
Homepage = "https://github.com/ChinoMDN/resonance-audio-builder"
Repository = "https://github.com/ChinoMDN/resonance-audio-builder"
Issues = "https://github.com/ChinoMDN/resonance-audio-builder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
